--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 							<article class="post featured">
 								<header class="major">
 									
-									<h2><a href="#">This will feature a<br />
-									cool project</a></h2>
-									<p>This paragraph will contain a brief write up about the project.</p>
+									<h2><a href="#">Supermarket Sales Analysis Project<br />
+									</a></h2>
+									<p>This project entailed analyzing the sales data of a supermarket in a bid to understand the various contributing factors to low and high revenue returns viz a viz gender, product line, branches, customer type and so on</p>
 								</header>
 								<a href="#" class="image main"><img src="images/pic01.jpg" alt="" /></a>
 								<ul class="actions special">
