--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
 									</a></h2>
 									<p>This project entailed analyzing the sales data of a supermarket in a bid to understand the various contributing factors to low and high revenue returns viz a viz gender, product line, branches, customer type and so on</p>
 								</header>
-								<a href="#" class="image main"><img src="images/360_F_97902007_wBBrmLVS3roJD6u3ST77mOLIal6QhNQU.jpg" alt="" /></a>
+								<a href="#" class="image main"><img src="images/main1.jpg" alt="" /></a>
 								<ul class="actions special">
 									<li><a href="#" class="button large">View Project</a></li>
 								</ul>
